# digital_signal_processing

./: .gitignore  CMakeLists.txt  DigitalSignalProcessing.cbp  DigitalSignalProcessing.layout  README.md  main.cpp
Lesson_1(Generator)/: main.cpp
include/: graph.hpp  plot.hpp  point.hpp
include/AmpDetector/: AmpDetector.hpp
include/FIR/: FIR.h
include/FloatingAverage/: FloatingAverage.h
include/Generator/: FunctionParameters.hpp  Generator.hpp
include/KFilter/: KFilter.h
src/AmpDetector/: AmpDetector.cpp
src/FIR/: FIR.cpp
src/FloatingAverage/: FloatingAverage.cpp
src/Generator/: Generator.cpp
src/KFilter/: KFilter.cpp
